Update options method
